--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>CalculadoraIpv4</title>
-  <base href="/">
+  <base href="/Calculadora">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 <style>html{box-sizing:border-box;background-color:#f8f3d9}*,*:before,*:after{box-sizing:inherit}</style><link rel="stylesheet" href="styles-V3XF6BR7.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles-V3XF6BR7.css"></noscript></head>
